# gitkraken-assessment

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
sales_pipeline/: analyze.py  explore.py  ingest.py  main.py  process.py
sales_pipeline/utils/: cleanup.py  constants.py  envs.py  logger.py  upload_to_s3.py
tests/: test_envs.py  test_upload.py
